manifests/vote/vote.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote-app
  namespace: production
  annotations:
    pod.kubernetes.io/lifetime: 2m
  labels:
    app: vote-app
spec:
  selector:
    matchLabels:
      app: vote-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      namespace: production
      labels:
        app: vote-app
    spec:
      containers:
      - name: vote-app
        image: santiagososs/vote-app:17862365005
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "100Mi"
            cpu: "10m"
          limits:
            memory: "600Mi"
            cpu: "80m"
