manifests/vote/vote-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vote-app
  name: vote-app
  namespace: production
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: 80
  selector:
    app: vote-app
